tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions13(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions13.ts(1,21): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


==== unicodeExtendedEscapesInRegularExpressions13.ts (1 errors) ====
    var x = /\u{DDDDD}/gu;
                        ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    